_sass/_theme.scss
// Document Prep
* {
  margin: 0;
  padding: 0;
  font-variation-settings: "slnt" 0deg;
}

body {
  @supports (font-variation-settings: normal) {
    font-family: $font-var;
    font-variation-settings: 'wght' $font-regular;
    font-style: normal;
  }
  font-style: normal;
  background: $LIGHTbgColour;
  color: $LIGHTtextColour;
  font-family: $font;
  margin: 0 auto;
  width: 100%;
  height: 100%;
  max-width: 100%;
  scroll-behavior: smooth;
}

// Typography
@media (max-width: 500px) {
  h1 { font-size: 28px !important; }
  h2 { font-size: 21px !important; }
  h3 { font-size: 19px !important; }
  .post { h3 { font-size: 14px !important; } }
  h4, h5, h6 { font-size: 16px !important; }
  .tagline, .tagline * { font-size: 12vw !important; }
  b {
    @supports (font-variation-settings: normal) { font-variation-settings: 'wght' $font-bold, 'slnt' 0; }
    font-weight: $font-bold !important;
  } // Keeps bold bold, no matter the scenario
}
@media (max-width: 750px) { font-size: 72px; }

p { margin: 1em 0; }
h1 {
  font-size: 48px;
  @supports (font-variation-settings: normal) { font-variation-settings: "wght" $font-bold, 'slnt' 0; }
  font-weight: $font-bold;
  line-height: 1.1;
}
h2 {
  font-size: 24px;
  line-height: 1.35;
}
h3 { font-size: 16px; }
ol, ul { margin: 1em 1em; }
.category_name { 
  font-size: 22px;
  line-height: 1.1;
  margin: .25em 0;
  margin-left: 0 !important;
}

a {
  color: $LIGHTlinkColour;
  transition: color 250ms ease-in-out;
}
a:hover {
  color: $LIGHTlinkHoverColour;
}
ul a, ol a { text-decoration: none; }

em {
  @supports (font-variation-settings: normal) { font-variation-settings: "slnt" 10deg; }
  font-style: italic;
}
strong {
  @supports (font-variation-settings: normal) { font-variation-settings: "wght" 700; }
  font-style: bold;
}

// Code blocks
.highlight, code, .highlighter-rogue {
  @supports (font-variation-settings: normal) { font-family: $codeFont-var; }
  font-family: $codeFont;
  background: $LIGHTcodebgColour;
  color: $LIGHTcodeColour;
  padding: .5vh 1vh .5vh 1vh;
}
code { padding: .25vh .5vh .25vh .5vh; }

// Navigation
header {
  text-align: center;
  display: flex;
  justify-content: space-between;
  height: 100px;
  background: $accentColour;
  padding-left: 16px;
  * {
    cursor: default;
    font-size: 14px;
  }
  h1 {
    flex: 0 0 auto;
    margin: 0;
    display: flex;
    flex-direction: column;
    justify-content: center;
    a {
      display: block;
      :hover { cursor: pointer; }
    }
    img { 
      display: block;
      border: none !important;
    }
  }
  a {
    color: $navColour;
    background: none;
    :hover {
      color: inherit;
      background: none;
    }
  }
}

nav {
  ul {
    flex: 0 0 auto;
    text-align: left;
    display: flex;
    margin-top: 2.5em;
    li {
      list-style: none;
      margin: 0;
      padding: 0;
      display: flex;
      flex-direction: column;
      justify-content: center;
      :first-child { margin-left: 0; }
      a {
        cursor: pointer;
        padding: 0 0.8em;
        font-size: 1.1em;
        text-decoration: none;
        color: $navColour;
      }
      a:hover {
        text-decoration: underline;
        color: inherit;
        transition: all 150ms ease-in-out;
      }
      :last-child { a { padding-right: 0; } }
    }
  }
}

// Header
.header {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  background: $accentColour;
  color: $headerTextColour;
  padding: 1.5em 32px;
  max-height: 30vh;

  p, b {
    flex: 0 0 auto;
    display: flex;
    justify-content: center;

    font-size: 80px;
    letter-spacing: -.05em;
    line-height: 1.1;
    white-space: nowrap;
  }
  p {
    @supports (font-variation-settings: normal) { font-variation-settings: 'wght' $font-regular, 'slnt' 0; }
    font-weight: $font-regular;
    margin: auto 16px;
  }
  b {
    margin-left: 10px;
    @supports (font-variation-settings: normal) { font-variation-settings: 'wght' $font-bold, 'slnt' 0; }
    font-weight: $font-bold;
  }
}

// Footer
footer {
  display: flex;
  flex-direction: row;
  flex-wrap: nowrap;
  justify-content: center;
  text-align: center;
  p {
    font-size: .75em; 
    a {
      color: $LIGHTlinkColour;
      @media(prefers-color-scheme: dark) { color: $DARKlinkColour; }
      text-decoration: underline;
    }
  }
}

.end {
  margin-left: 25%;
  width: 50vw;
  border: 0;
  height: 1px;
  background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(255, 255, 255, 0.75), rgba(0, 0, 0, 0));
}

// Main Content
.container {
  width: 50vw;
  @media(max-width: 1000px) { width: 90vw; }
  margin: 1em auto;

  p {
    img {
      @if $classicimages {
        @media(max-width: 1000px) { max-width: 80vw; }
        max-width: 50vw;
      } @else {
        @media(max-width: 1000px) { max-width: 60vw; }
        @media(max-width: 500px) { max-width: 80vw; }
        max-width: 35vw;
        & { text-align: center; }
      }
    }
  }
  ul, ol {
    margin-left: 2em;
    margin-right: 24px !important;
    ul, ol {
      margin-top: .25em;
      margin-bottom: .25em;
    }
    li {
      padding-top: .25em;
      padding-bottom: .25em;
      a { text-decoration: underline; }
      p, a {
        margin: 0;
        padding: 0;
      }
    }
  }
  @media(prefers-color-scheme: dark) {
    a { color: $DARKlinkColour; }
    a:hover, ul a:hover, ol a:hover, p a:hover {
      color: $DARKlinkHoverColour;
      transition: all 250ms ease-in-out;
    }
  }
  .highlight, p, hr {
    margin-left: 1em;
    margin-right: 24px;
  }
  @media (max-width: 500px) {
    max-width: calc(100vw - 1em);
    margin: 1em 1em 1em 1em;
    width: auto;
  }
  hr { margin-bottom: 1em; }
}

// Images
img {
  border: $borderSize $borderType $LIGHTborderColour;
  :before {
    display: none;
    content: '';
  } // Hack from https://stackoverflow.com/a/980948
}

// Blog Posts
.post {
  h3 { font-size: 14px !important; }
  a { text-decoration: underline; }
}

// Auto Dark Theme as Declared by Browser/OS
@media (prefers-color-scheme: dark) {
  .highlight, blockquote {
    background: $DARKcodebgColour;
    color: $DARKcodeColour;
  }
  body {
    background: $DARKbgColour;
    color: $DARKtextColour;
  }
  img { border: $borderSize $borderType $DARKborderColour; }
}

// Make pixel trackers invisible
.pxl {
  width: 1px;
  height: 1px;
  border: none;
}

// Table Formatting
table {
  display: block;
  overflow: auto;
  height: 200px;
  border-collapse: collapse;
  table-layout: fixed;
  padding: .5em .5em;
  margin: 0 auto;
  width: 100%;
  @media(max-width: 500px) { width: 300px; }
  thead {
    background: #353230;
    color: #fff;
    @media(prefers-color-scheme: dark) {
      background: #d3d3d3;
      color: #000;
    }
  }
  th { @media(min-width: 500px) { padding: .25em 2em; } }
  th, td { padding: .5em .5em; }
  tbody {
    td {
      @media(prefers-color-scheme: light) { border: 1px solid #000; }
      border: 1px solid #fff;
    }
  }
}

// Footnotes
.footnote {
  text-decoration: none !important;
  margin: .10em .10em !important;
}
.footnotes {
  border-top: 1px solid #000;
  font-size: 14px;
  @media(prefers-color-scheme: dark) { border-top: 1px solid #fff; }
}

// Definition lists
dt {
  @supports (font-variation-settings: normal) { font-variation-settings: 'wght' $font-bold, 'slnt' 0; }
  font-weight: $font-bold;
}
dd { margin: .25em 1em; }

// Checklists
.task-list {
  list-style-type: none;
  margin-left: 1em !important;
}
.task-list-item-checkbox { margin-right: .5em; }

// Centreing for images (see Wiki for more info)
.centre { text-align: center; }

// BLM banner
.blm-banner {
  height: 3em;
  padding: .25em;
  background: #000;
  text-align: center;
  display: flex;
  align-items: center;
  justify-content: center;
  color: #fff;
  @supports (font-variation-settings: normal) { font-variation-settings: 'wght' $font-bold, 'slnt' 0; }
  font-weight: $font-bold;
  text-decoration: none;
  @media(max-width: 500px) {
    font-size: .9em;
    padding: .7em;
  }
  font-size: .95em;
}

// Blockquotes
blockquote {
  background: $LIGHTcodebgColour;
  color: $LIGHTcodeColour;
  margin-top: .5em;
  padding: 1vh 1vh;
  margin-bottom: 1em;
  border-left: 4px solid $accentColour;
  h1, h2, h3, h4, h5, h6 { padding: 1.5vh .5vh .25vh 1vh; }
  .highlighter-rouge {
    border-left: 4px solid $accentColour;
    margin-bottom: 1em;
  }
  blockquote, .highlighter-rouge { margin-left: 1vw; }
}

